[gd_scene load_steps=9 format=3 uid="uid://djh1dj6dt0e6m"]

[ext_resource type="Script" path="res://leveis/script/hud_manager.gd" id="1_n5s70"]
[ext_resource type="Texture2D" uid="uid://bqbcg2lwsvwkb" path="res://assets/Mini FX, Items & UI/Common Pick-ups/00_Coin-Sprites.png" id="1_rcvwe"]
[ext_resource type="Texture2D" uid="uid://cli7s2k8y2mj6" path="res://assets/Mini FX, Items & UI/Common Pick-ups/01_Coin-Sprites.png" id="2_3syjn"]
[ext_resource type="Texture2D" uid="uid://cp0872flcjj4m" path="res://assets/Mini FX, Items & UI/Common Pick-ups/02_Coin-Sprites.png" id="3_j1qqc"]
[ext_resource type="Texture2D" uid="uid://ctknrjhltduwv" path="res://assets/Mini FX, Items & UI/Common Pick-ups/03_Coin-Sprites.png" id="4_4xevk"]
[ext_resource type="FontFile" uid="uid://b5m0bdsyir3gh" path="res://assets/fonts/RevMiniPixel.ttf" id="5_ht1n0"]
[ext_resource type="Texture2D" uid="uid://ctr28un3oocpf" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Life-Counter-Icon.png" id="6_3hhld"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_jhdbj"]
frames = 4
frame_0/texture = ExtResource("1_rcvwe")
frame_1/texture = ExtResource("2_3syjn")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_j1qqc")
frame_2/duration = 1.0
frame_3/texture = ExtResource("4_4xevk")
frame_3/duration = 1.0

[node name="HUD" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5s70")
default_seconds = 27

[node name="Clock_timer" type="Timer" parent="Control"]
autostart = true

[node name="Container" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Coins_container" type="HBoxContainer" parent="Control/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Coins_icon" type="TextureRect" parent="Control/Container/Coins_container"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AnimatedTexture_jhdbj")
expand_mode = 2

[node name="Coins_counter" type="Label" parent="Control/Container/Coins_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "0000"
vertical_alignment = 1

[node name="Timer_container" type="HBoxContainer" parent="Control/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Timer_label" type="Label" parent="Control/Container/Timer_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "TEMPO:"
vertical_alignment = 1

[node name="Timer_counter" type="Label" parent="Control/Container/Timer_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "00:00"
vertical_alignment = 1

[node name="Life_container" type="HBoxContainer" parent="Control/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Life_icon" type="TextureRect" parent="Control/Container/Life_container"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_3hhld")
expand_mode = 2

[node name="Life_separator" type="Label" parent="Control/Container/Life_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "X"
vertical_alignment = 1

[node name="Life_counter" type="Label" parent="Control/Container/Life_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "03"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/Container"]
layout_mode = 2
theme_override_constants/margin_top = 46

[node name="Score_container" type="HBoxContainer" parent="Control/Container/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="Score_label" type="Label" parent="Control/Container/MarginContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "PONTUAÇÃO:"
vertical_alignment = 1

[node name="Score_counter" type="Label" parent="Control/Container/MarginContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ht1n0")
theme_override_font_sizes/font_size = 24
text = "000000"
vertical_alignment = 1

[connection signal="timeout" from="Control/Clock_timer" to="Control" method="_on_clock_timer_timeout"]
